Use Firefox with travis-ci

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It's not quite working yet, but there is a demo to get an idea of how it would work.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
+    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS,Firefox"
   },
   "repository": {
     "type": "git",
